next
----
- Moved all JS code into own namespace (Sam Dark).

1.1
---
- Changed shorttags to echo (Sam Dark).

1.0
---
- Initial release (Sam Dark).