@@ -1,5 +1,6 @@
 next
 ----
+- Changed charset to application default (Sam Dark).
 - Moved all JS code into own namespace (Sam Dark).
 
 1.1
